--- a/public/styles.css
+++ b/public/styles.css
@@ -7,9 +7,9 @@
 }
 
 body {
-  font-family: "FontMarkPro", helvetica;
-  background-color: #ffffff;
-  color: #000000;
+  font-family: "FontMarkPro", helvetica, sans-serif;
+  background-color: #fff;
+  color: #000;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -22,9 +22,13 @@ body {
   padding: 20px;
 }
 
+.logo {
+  display: block;
+  margin: 0 auto;
+}
+
 h1 {
-  margin-top: 32px;
-  margin-bottom: 10px;
+  margin: 32px 0 10px;
   font-size: 16px;
 }
 
@@ -32,12 +36,6 @@ p {
   margin-bottom: 20px;
   font-size: 14px;
   text-align: justify;
-}
-
-.file-input,
-.template-input,
-.submit-input {
-  margin-bottom: 20px;
 }
 
 #upload {
@@ -49,15 +47,11 @@ p {
 .custom-submit-button {
   display: inline-block;
   padding: 10px 20px;
-  font-family: "FontMarkPro", helvetica;
-  border: 1px solid #000000;
-  background-color: #ffffff;
+  font-family: "FontMarkPro", helvetica, sans-serif;
+  border: 1px solid #000;
+  background-color: #fff;
   transition: background-color 0.3s, color 0.3s;
-}
-
-.submit-input {
-  display: flex;
-  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .custom-template-input {
@@ -70,11 +64,14 @@ p {
   color: #fff;
   width: 160px;
   cursor: pointer;
+  text-align: center;
+  display: block;
+  margin: 20px auto;
 }
 
 .custom-file-upload {
-  border: 1px dashed #000000;
-  color: #cccccc;
+  border: 1px dashed #000;
+  color: #ccc;
   padding: 64px 16px;
   text-align: center;
   width: calc(100% - 34px);
@@ -93,9 +90,4 @@ p {
 
 .error {
   color: red;
-}
-
-.image-container {
-  display: flex;
-  justify-content: center;
 }
